# modorganizer-installer_fomod

./: .git-blame-ignore-revs  .gitignore  CMakeLists.txt  appveyor.yml  metadata.json  vcpkg.json
.github/workflows/: build.yml  linting.yml
src/: CMakeLists.txt  fomodinstallerdialog.cpp  fomodinstallerdialog.h  fomodinstallerdialog.ui  fomodscreenshotdialog.cpp  fomodscreenshotdialog.h  fomodscreenshotdialog.ui  installerFomod.pro  installer_fomod_en.ts  installerfomod.cpp  installerfomod.h  resources.qrc  scalelabel.cpp  scalelabel.h  xmlreader.cpp  xmlreader.h
